--- a/pageFive/pageFive.html
+++ b/pageFive/pageFive.html
@@ -5,15 +5,15 @@
     <title> Kindness </title>
 <head>
 
-<link rel="stylesheet" href="css/mainStyle.css">
+<link rel="stylesheet" href="css/pageFiveStyling.css">
 
 <body>
     <p>
-        Here is a
+        You can do
 
-        <a href="pageTwo/pageTwo.html">story</a> 
+        <a href="pageTwo/pageTwo.html">little</a> 
         
-        I tell myself each day...
+        things
     </p>
 </body>
 
