--- a/pageThree/pageThree.html
+++ b/pageThree/pageThree.html
@@ -5,15 +5,15 @@
     <title> Kindness </title>
 <head>
 
-<link rel="stylesheet" href="css/mainStyle.css">
+<link rel="stylesheet" href="css/pageThreeStyling.css">
 
 <body>
     <p>
-        Here is a
+        You can be
 
-        <a href="pageTwo/pageTwo.html">story</a> 
+        <a href="pageTwo/pageTwo.html">present</a> 
         
-        I tell myself each day...
+        with people
     </p>
 </body>
 
