--- a/pageTwo/pageTwo.html
+++ b/pageTwo/pageTwo.html
@@ -5,15 +5,14 @@
     <title> Kindness </title>
 <head>
 
-<link rel="stylesheet" href="css/mainStyle.css">
+<link rel="stylesheet" href="css/pageTwoStyling.css">
 
 <body>
     <p>
-        Here is a
+        You can be
 
-        <a href="pageTwo/pageTwo.html">story</a> 
+        <a href="../pageThree/pageThree.html">kind</a> 
         
-        I tell myself each day...
     </p>
 </body>
 
