--- a/pageFive/pageFive.html
+++ b/pageFive/pageFive.html
@@ -11,7 +11,7 @@
     <p>
         You can do
 
-        <a href="pageTwo/pageTwo.html">little</a> 
+        <a href="../pageSix/pageSix.html">little</a> 
         
         things
     </p>
