--- a/pageSix/pageSix.html
+++ b/pageSix/pageSix.html
@@ -11,7 +11,7 @@
     <p>
         To make them
 
-        <a href="pageTwo/pageTwo.html">feel</a> 
+        <a href="../pageSeven/pageSeven.html">feel</a> 
 
         better.
     </p>
