--- a/pageThree/pageThree.html
+++ b/pageThree/pageThree.html
@@ -11,7 +11,7 @@
     <p>
         You can be
 
-        <a href="pageTwo/pageTwo.html">present</a> 
+        <a href="../pageFour/pageFour.html">present</a> 
         
         with people
     </p>
