--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 <head>
 
 <link rel="stylesheet" href="css/mainStyle.css">
+<link rel="stylesheet" href="https://use.typekit.net/osn8hdr.css" Jean Moderno>
+<link rel="font" href="fonts/Bloom-Regular.otf" Bloom>
 
 <body>
-    <p>
-        Here is a
-
-        <a href="pageTwo/pageTwo.html">story</a> 
-        
-        I tell myself each day...
-    </p>
+    <p> Here </p>
+    <p> is </p>
+    <p> a </p>
+    <a href="pageTwo/pageTwo.html">story</a> 
+    <p> I tell myself each day... </p>
 </body>
 
 </html>
