--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 <link rel="stylesheet" href="css/mainStyle.css">
 <link rel="stylesheet" href="https://use.typekit.net/osn8hdr.css" Jean Moderno>
 <link rel="font" href="fonts/Bloom-Regular.otf" Bloom>
+<link rel="font" href="fonts/Children Books Font by Kidsy Graphic.otf" Children Book>
 
 <body>
     <p> Here </p>
     <p> is </p>
     <p> a </p>
-    <a href="pageTwo/pageTwo.html">story</a> 
+    <div class="story">
+        <a href="pageTwo/pageTwo.html">story</a> 
+    </div>
     <p> I tell myself each day... </p>
 </body>
 
