--- a/pageFour/pageFour.html
+++ b/pageFour/pageFour.html
@@ -6,15 +6,20 @@
 <head>
 
 <link rel="stylesheet" href="css/pageFourStyling.css">
+<link rel="stylesheet" href="https://use.typekit.net/osn8hdr.css" Jean Moderno>
+<link rel="font" href="fonts/Bloom-Regular.otf" Bloom>
+<link rel="font" href="fonts/Children Books Font by Kidsy Graphic.otf" Children Book>
+<link rel="font" href="fonts/Fiesta-Bold.otf" Fiesta>
 
 <body>
-    <p>
-        <a href="../pageFive/pageFive.html">Know</a> 
-
-        that you don't know
-        <br>
-        What their lives are like.
+    <a class="know" href="../pageFive/pageFive.html">Know</a> 
     
+    <p id="secondline">    
+        that you don't know
+    </p>
+
+    <p id="thirdline"> 
+        What their lives are like.
     </p>
 </body>
 
