--- a/pageEight/pageEight.html
+++ b/pageEight/pageEight.html
@@ -6,6 +6,10 @@
 <head>
 
 <link rel="stylesheet" href="css/pageEightStyling.css">
+<link rel="stylesheet" href="https://use.typekit.net/osn8hdr.css" Jean Moderno>
+<link rel="font" href="fonts/Bloom-Regular.otf" Bloom>
+<link rel="font" href="fonts/Children Books Font by Kidsy Graphic.otf" Children Book>
+<link rel="font" href="fonts/Fiesta-Bold.otf" Fiesta>
 
 <body>
     <p>
