--- a/pageEight/pageEight.html
+++ b/pageEight/pageEight.html
@@ -12,14 +12,13 @@
 <link rel="font" href="fonts/Fiesta-Bold.otf" Fiesta>
 
 <body>
-    <p>
-        Being
-
-        <a href="../pageNine/pageNine.html">isolated</a> 
-
-        has been difficult,
-
-    </p>
+    <div id="pageEight">
+            <p> Being </p>
+        <div class="isolated">
+            <a href="../pageNine/pageNine.html">isolated</a> 
+        </div>
+            <p> has been difficult, </p>
+    </div> 
 </body>
 
 </html>
