--- a/pageFive/pageFive.html
+++ b/pageFive/pageFive.html
@@ -12,13 +12,13 @@
 <link rel="font" href="fonts/Fiesta-Bold.otf" Fiesta>
 
 <body>
-    <p>
-        You can do
-
-        <a href="../pageSix/pageSix.html">little</a> 
-        
-        things
-    </p>
+    <div id="pageFive">
+        <p> You can do </p>
+            <div class="little">
+                <a href="../pageSix/pageSix.html">little</a> 
+            </div>
+        <p> things </p>
+    </div>
 </body>
 
 </html>
