--- a/pageFour/pageFour.html
+++ b/pageFour/pageFour.html
@@ -12,15 +12,16 @@
 <link rel="font" href="fonts/Fiesta-Bold.otf" Fiesta>
 
 <body>
-    <a class="know" href="../pageFive/pageFive.html">Know</a> 
-    
-    <p id="secondline">    
-        that you don't know
-    </p>
+    <div class="know">
+        <a href="../pageFive/pageFive.html">Know</a> 
+    </div>
+        <p>    
+            that you don't know
+        </p>
 
-    <p id="thirdline"> 
-        What their lives are like.
-    </p>
+        <p> 
+            What their lives are like.
+        </p>
 </body>
 
 </html>
