--- a/pageSeven/pageSeven.html
+++ b/pageSeven/pageSeven.html
@@ -12,18 +12,14 @@
 <link rel="font" href="fonts/Fiesta-Bold.otf" Fiesta>
 
 <body>
-    <p>
-        You can get to know them
-        
-        <br>
-
-        By
-
-        <a href="../pageEight/pageEight.html">listening</a> 
-
-        and not judging.
-
-    </p>
+    <div id="pageSeven">
+        <p> You can get to know them </p>
+        <p> By </p>
+        <div class="listening">
+            <a href="../pageEight/pageEight.html">listening</a> 
+        </div>
+            <p> and not judging. </p>
+    </div>
 </body>
 
 </html>
