--- a/pageSix/pageSix.html
+++ b/pageSix/pageSix.html
@@ -8,13 +8,13 @@
 <link rel="stylesheet" href="css/pageSixStyling.css">
 
 <body>
-    <p>
-        To make them
-
-        <a href="../pageSeven/pageSeven.html">feel</a> 
-
-        better.
-    </p>
+    <div id="pageSix">
+        <p> To make them </p>
+            <div class="feel">
+                <a href="../pageSeven/pageSeven.html">feel</a> 
+            </div>
+            <p> better. </p>
+    </div>
 </body>
 
 </html>
