--- a/pageThree/pageThree.html
+++ b/pageThree/pageThree.html
@@ -12,13 +12,13 @@
 <link rel="font" href="fonts/Fiesta-Bold.otf" Fiesta>
 
 <body>
-    <p>
-        You can be
-
-        <a href="../pageFour/pageFour.html">present</a> 
-        
-        with people
-    </p>
+    <div id="pageThree">
+        <p> You can be </p>
+        <div class="present">
+            <a href="../pageFour/pageFour.html">present</a> 
+        </div>
+        <p>with people</p>
+    </div>
 </body>
 
 </html>
