--- a/pageTwo/pageTwo.html
+++ b/pageTwo/pageTwo.html
@@ -9,14 +9,14 @@
 <link rel="stylesheet" href="https://use.typekit.net/osn8hdr.css" Jean Moderno>
 <link rel="font" href="fonts/Bloom-Regular.otf" Bloom>
 <link rel="font" href="fonts/Children Books Font by Kidsy Graphic.otf" Children Book>
-<link rel="font" href="fonts/Fiesta-Bold.otf" Fiesta>
+<link rel="font" href="fonts/Fiesta-Bold.otf" fiesta>
 
 <body>
     <p>
         You can be
-
-        <a href="../pageThree/pageThree.html">kind</a> 
-        
+        <div class="kind">
+            <a  href="../pageThree/pageThree.html">kind</a> 
+        </div>
     </p>
 </body>
 
